--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header{
     padding: 8px 20px;
     border-radius: 30px;
     color: white;
+    transition: .4s all ease-in-out;
 }
 .btn-sing:hover{
     color: white;
@@ -68,6 +69,7 @@ header{
     text-transform: uppercase;
     box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transition: .4s all ease-in-out;
 }
 .banner-contant a:hover{
     background-color: #107749;
@@ -142,6 +144,7 @@ header{
     border-radius: 30px;
     color: white;
     margin: 0;
+    transition: .4s all ease-in-out;
 }
 .course_contant a:hover{
     color: white;
