--- a/media.css
+++ b/media.css
@@ -36,3 +36,8 @@
         margin-left: 60px;
     }
 }
+@media(min-width:320px) and (max-width:425px){
+    .course_header h1{
+        font-size: 33px;
+    }
+}
